# EDACraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  RTLGEN.md  RTLGEN_CN.md  _read_desc.bat  agent-driven.md  build.bat  build_model.bat  conv_grid_bsim4.csv  conv_grid_bsim4_nh.csv  conv_grid_inverter.csv  demo_pg_network.py  multi-rate.md  nul  plan.md  probe_flake.cpp  pyproject.toml  restore_missing.sh  run_c3bis.bat  run_heavy.bat  runtest.bat  status0620.md  status0620_v2.md  status0620_v4.md  status0621-v2.md  status0621.md  status_phaseA1.md  status_umfpack.md
CktCraft/: CMakeLists.txt  Sparam.md  audit0623.md  build_asan.bat  build_model.bat  plan0620.md  plan0620_v2.md  plan0621-v4.md  run_bench.bat  run_bench_dc.bat  runtest.bat  status0620_v3.md  status0620_v5.md  status0621-v3.md  status_level54.md  status_optimization.md  status_optimization_v2.md  status_pdk_e2e.md  status_phaseA2.md  status_phaseB.md  status_phaseC.md  status_phaseD.md  status_solver_selection.md
CktCraft/cmake/: SuiteSparseKLU.cmake  rfsim_config.h.in
CktCraft/docs/: ki3_internal_node_overflow.md
CktCraft/models/: bsim4_nmos.sp  nmos_sh.va  simple_diode.va
CktCraft/netlists/: analog_comparator.sp  analog_current_mirror.lis  analog_current_mirror.sp  analog_diff_pair.sp  analog_opamp.sp  bsim4_nmos.inc  bsim4_pmos.inc  diode_bandgap.sp  diode_esd_clamp.sp  diode_iv_curve.lis  diode_iv_curve.sp  mos_buffer_64.sp  mos_cs_chain_16.sp  mos_diff_chain_5.sp  mos_flash_adc.lis  mos_inverter_chain.lis  mos_inverter_chain.sp  mos_mirror_32.lis  mos_nand.sp  mos_nor.sp  mos_ring_osc_fanout8.sp  rc_clock_tree.lis  rc_ladder_100.lis  rc_ladder_500.sp  rc_simple.lis  rf_lc_osc.sp  rf_lc_vco.sp  rf_lna.sp  rf_mixer.sp  rf_pa.sp  sparam_dc_test.lis  sparam_test.lis  test.s2p  test_direct_model.lis  test_direct_model.sp
CktCraft/src/: CMakeLists.txt  rfsim.hpp
CktCraft/tests/: CMakeLists.txt  bench_recorder.hpp  test_analysis.cpp  test_assembly.cpp  test_convergence_grid.cpp  test_edge_cases.cpp  test_expression.cpp  test_flatten.cpp  test_gmin_floor.cpp  test_gmres.cpp  test_hb.cpp  test_hb_nl.cpp  test_model.cpp  test_multi_device.cpp  test_osdi.cpp  test_parser.cpp  test_shooting.cpp  test_waveform_export.cpp
CktCraft/tools/: bench_summary.py  waveview.py
ImplCraft/: IMPLEMENTATION_SUMMARY.md  PARTITION_SYSTEM.md  PG_NETWORK_GUIDE.md  PHASE3_SUMMARY.md  PROJECT_SUMMARY.md  README.md  WEB_PLATFORM.md  backend_plan.md  demo_partition.py  edatools.md  pyproject.toml  run_cadence_flow.py  run_web.py
ImplCraft/config/: project_default.yaml
ImplCraft/configs/: FullSystem.yaml  FullSystem_150MHz.yaml
ImplCraft/docs/: ARCHITECTURE_SUMMARY.md  DC_ARCHITECTURE.md  PRIMETIME_INTEGRATION.md  plan0626.md
ImplCraft/examples/: dc_synthesis.tcl  run_synthesis.sh
ImplCraft/src/: partition.py  pg_network.py  run_flow.py
ImplCraft/tests/: test_adapters.py  test_area_planner.py  test_design_context.py  test_dft_engine.py  test_drc_lvs_fixer.py  test_harden_engine_v2.py  test_industrial.py  test_macro_placer_v2.py  test_pad_planner.py  test_parsers.py  test_power_mesh.py  test_tools_utils.py
ImplCraft/web/: __init__.py
ImplCraft/work/: design_state.json
MoMCraft/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  compare_all.py  phase_deembed.py  pyproject.toml  requirements-build.txt  route_geometry.py  routed_case_solver.py  routed_strip_mesh.py  使用说明.md
MoMCraft/bindings/: CMakeLists.txt  mom_bindings.cpp
MoMCraft/core/: CMakeLists.txt
MoMCraft/data/: demo_microstrip.s2p
MoMCraft/docs/: UCIE_IMPLEMENTATION.md  VERTICAL_CURRENT_SUPPORT.md  multi-port.md
MoMCraft/examples/: freq_sweep_demo.py  run_structure_demo.py  run_touchstone_demo.py  run_ucie_demo.py
MoMCraft/scripts/: build.bat  rebuild.bat
MoMCraft/tests/: test_layered_green_regression.py  test_raw_solver_conductor_loss.py  test_smoke.py
RTLCraft/: .gitignore  GPT-comments.md  PLAN_behavioral_model_verification.md  PLAN_simulator_optimization.md  README.md  README_CN.md  README_EN.md  RELEASE_PREP.md  RTLGEN.md  STATUS.md  Tutorial.md  Tutorial_CN.md  _build_dsl.py  _rebuild_all.py  a.out  audit0615.md  check_hw.py  check_hw2.py  check_ko3.py  check_lsb_latency.py  check_mul128_latency.py  check_ref.py  check_test.py  cppengine.md  cpu_core4_report.md  deep_test_all.py  deepseek.md  fp16_fp8_shared_alu.py  framework_audit0617.md  generalization_review_0611.md  generate_hetero_riscv4.py  generate_hetero_riscv4_real.py  generate_npu4.py  generate_thor_gpu.py  generated_fp16_fp8_shared_alu.v  generated_round_robin_arbiter.v  gf65.lib  gpgpu_core.v  gpgpu_core_fixed.v  gpgpu_core_generated.v  (+50 more)
RTLCraft/abc/: .gitcommit
RTLCraft/crypto/: __init__.py
RTLCraft/doc_templates/: README.md  __init__.py  layer_spec.md  module_spec.md  test_plan.md  test_report.md  top_level_spec.md
RTLCraft/earphone/: README.md  Tutorial.md  approval.py  constraints.py  design_earphone.py  design_spec.md  docgen.py  flow.py
RTLCraft/examples/: chacha20_pipe.sv  chacha20_pipe.v  cocotb_counter_demo.py  debug_montgomery.py  decoder_8b10b.py  decoder_demo.py  forgen_always_demo.py  fp8.v  fsmm.v  generate_for_demo.py  generate_for_inst_demo.py  genif_demo.py  nested_forgen_demo.py  param_auto_demo.py  param_expr_demo.py  pipeline_adder.py  placement_demo.py  protocols_demo.py  pyuvm_counter_demo.py  resnet18_npu.py  sha3_256.v  sha3_256_pipe.py  sim_multiclock_demo.py  sizing_demo.py  submodule_inst_demo.py  sva_demo.py  uvm_apb_vip_demo.py  uvm_axi4_vip_demo.py  (+2 more)
TCADCraft/: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
src/: CMakeLists.txt  __init__.py  __main__.py  run_flow.py
tests/: CMakeLists.txt  cs_amp_pss.lis  cs_amp_pss.sp  cs_amp_pss_pss.csv  test_assembly.cpp  test_bsim4.cpp  test_config.py  test_expression.cpp  test_flow.py  test_hb_nl.cpp  test_industrial.py  test_large_scale.cpp  test_model.cpp  test_nonlinear_damping.cpp  test_parser.cpp  test_partition.py  test_pg_network.py  test_shooting.cpp  test_solver_benchmark.cpp  test_solver_selection.cpp  test_stability.cpp
(+4257 files in other folders)
