[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ic-backend"
version = "0.1.0"
description = "IC Backend Design Agent Support System — MVP"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
ic-backend = "src.run_flow:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
